# jni-poc-cpp

./: CMakeLists.txt  com_odps_arrow_TestArrowJni.cpp  com_odps_arrow_TestArrowJni.h
release/: libtest_jni.dylib
